<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/studentButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/special_button"
        android:onClick="goTostudentPage"
        android:padding="25dp"
        android:text="@string/student"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/professorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/special_button"
        android:onClick="gotoProfessorsPage"
        android:padding="25dp"
        android:text="@string/professor"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/special_button"
        android:onClick="goToAdminPage"
        android:padding="25dp"
        android:text="@string/admin"
        android:textColor="@color/white" />


</LinearLayout>